--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
-<h1>Hello RCS!</h1>
-Just some text with no tags
-<p>lorem ipsum</p>
+<!DOCTYPE html>
+<html>
+ <head>
+   <meta charset="utf-8">
+   <title>My testing page</title>
+ </head>
+ <body>
+    <h1>Hello RCS!</h1>
+    <h2> Just some text with no tags</h2>
+    <p>lorem ipsum</p>
+ </body>
+</html>
